--- a/noticias-random.html
+++ b/noticias-random.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Noticias aleatorias y curiosas de Hernavia y del mundo. Aquí encontrarás novedades y datos curiosos que no entran en otras categorías.">
     <link rel="icon" type="image/png" href="favicono.png">
     <link rel="stylesheet" href="estilo.css">
+     <link rel="canonical" href="https://hernavia.github.io/Hernavia/noticias-random.html">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Proyecto Hernavia">
     <style>
