--- a/noticias-random.html
+++ b/noticias-random.html
@@ -37,7 +37,6 @@
     <h1>Noticias Random</h1>  
 </header>
 
-<!-- Navegación directa -->
 <nav class="nav-comun">
     <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
     <a href="documentos.html">Documentos</a>
@@ -51,7 +50,7 @@
 
 <section class="section" id="noticias-dia">
     <h2>Noticias del día</h2>
-    <p>Hoy 1 de octubre de 2025 feliz mes de octubre, el resto de la existencia por si mañana no puedo festejar el nuevo día.</p>
+    <p>Hoy 5 de octubre de 2025 feliz mes de octubre no hay noticias por ahora.</p>
 </section>
 
 <section class="section" id="noticias-mundo">
