--- a/comounirse.html
+++ b/comounirse.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Formulario e información sobre cómo unirse a Hernavia, quieres saber más? Un poco más abajo encuentra una página que te lo explicará.">
     <link rel="icon" type="image/png" href="favicono.png">
     <link rel="preload" href="estilo.css" as="style">
-    <link rel="stylesheet" href="estilo.css
+    <link rel="stylesheet" href="estilo.css">
     <link rel="canonical" href="https://hernavia.github.io/Hernavia/comounirse.html">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Proyecto Hernavia">
@@ -20,7 +20,7 @@
             max-width: 900px;
             margin: 20px auto;
             padding: 20px;
-            background-color: white !important; /* Forzar fondo blanco */
+            background-color: white !important;
             border-left: 8px solid #006A44;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
@@ -63,17 +63,12 @@
             margin-top: 30px;
             padding: 20px;
             text-align: center;
-            background: white !important; /* Fondo blanco consistente */
+            background: white !important;
             border-radius: 10px;
         }
 
         .cta h2 {
             color: #006A44;
-        }
-
-        .cta p {
-            margin-bottom: 15px;
-            font-size: 1.1em;
         }
 
         .btn-link {
@@ -90,6 +85,41 @@
 
         .btn-link:hover {
             background-color: #004a2d;
+        }
+
+        /* Estilo del modal */
+        #modal-politica {
+            display: none;
+            position: fixed;
+            top: 0; left: 0;
+            width: 100%; height: 100%;
+            background: rgba(0, 0, 0, 0.6);
+            z-index: 1000;
+            justify-content: center;
+            align-items: center;
+        }
+
+        #modal-politica .contenido {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            max-width: 600px;
+            max-height: 80vh;
+            overflow-y: auto;
+        }
+
+        #cerrar-politica {
+            background: #006A44;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 6px;
+            cursor: pointer;
+            margin-top: 15px;
+        }
+
+        #cerrar-politica:hover {
+            background: #004a2d;
         }
     </style>
 </head>
@@ -123,20 +153,20 @@ Actualmente la ciudadanía por método virtual no está habilitada, aunque puede
     <input type="email" id="correo" name="correo" required>
 
     <label for="edad">Fecha de Nacimiento:</label>
-    <input type="number" id="edad" name="edad" min="1" max="120" required>
+    <input type="date" id="edad" name="edad" required>
 
-    <label for="ciudad">País/Ciudad/Municipio:</label>
+    <label for="ciudad">País / Departamento:</label>
     <input type="text" id="ciudad" name="ciudad" required>
+
+    <label for="municipio">Municipio (opcional):</label>
+    <input type="text" id="municipio" name="municipio">
 
     <label for="ocupacion">Ocupación (opcional):</label>
     <input type="text" id="ocupacion" name="ocupacion">
 
-    <label for="comentario">Motivación para unirse (opcional):</label>
-    <textarea id="comentario" name="comentario" rows="4" placeholder="Escribe aquí tu motivación..."></textarea>
-
     <label>
         <input type="checkbox" name="terminos" aria-label="Aceptar términos y condiciones" required>
-        Acepto los términos y condiciones de Hernavia.
+        Acepto los <a href="#" id="abrir-politica">términos y condiciones</a> de Hernavia.
     </label>
 
     <button type="submit">Enviar solicitud</button>
@@ -153,6 +183,37 @@ Actualmente la ciudadanía por método virtual no está habilitada, aunque puede
     &copy; 2025 Hernavia - Proyecto Cultural
 </footer>
 
+<!-- Modal de Política -->
+<div id="modal-politica">
+  <div class="contenido">
+    <h2>Política de Seguridad de Datos</h2>
+    <p>En Hernavia, la protección de tus datos es prioritaria. Los siguientes datos son obligatorios:
+    <strong>nombre completo, fecha de nacimiento, país/departamento y correo electrónico.</strong></p>
+
+    <p>También puedes proporcionar de manera opcional tu municipio y ocupación.</p>
+
+    <p>Si decides retirarte del proyecto, tus datos se conservarán hasta por <strong>2 meses</strong> para fines administrativos, luego serán eliminados de manera segura.</p>
+
+    <p>Puedes solicitar en cualquier momento la <strong>eliminación de tus datos opcionales</strong> o <strong>corrección de cualquier información</strong> enviando un correo al equipo de Hernavia.</p>
+
+    <button id="cerrar-politica">Cerrar</button>
+  </div>
+</div>
+
+<script>
+  const abrir = document.getElementById("abrir-politica");
+  const cerrar = document.getElementById("cerrar-politica");
+  const modal = document.getElementById("modal-politica");
+
+  abrir.addEventListener("click", (e) => {
+    e.preventDefault();
+    modal.style.display = "flex";
+  });
+
+  cerrar.addEventListener("click", () => {
+    modal.style.display = "none";
+  });
+</script>
+
 </body>
 </html>
-
