--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <section id="donde">
             <h2>¿Dónde se encuentra?</h2>
-            <p>Hernavia nace en Colombia, específicamente en el municipio de Gachancipá, donde puedes encontrar sus proyectos y toda su administración, aún en etapa inicial.</p>
+            <p>Hernavia nace en Colombia, específicamente en el municipio de Gachancipá, donde puedes encontrar sus proyectos y toda su administración, aún en etapa inicial, por lo cual aun no esperes ver actos tangibles estructura fuerte y todo cubierto pues aun es una etapa teorica y no practica asi que tus sugerencias no ayudan mucho.</p>
         </section>
 
         <section id="bandera">
@@ -66,6 +66,7 @@
 
 </body>
 </html>
+
 
 
 
