--- a/documentos.html
+++ b/documentos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Documentación de Hernavia</title>
     <meta name="description" content="Descubre los documentos iniciales de Hernavia para saber en qué se rige este proyecto.">
-    <link rel="icon" type="image/png" href="favicono.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
     <link rel="preload" href="estilo.css" as="style">
     <link rel="stylesheet" href="estilo.css">
     <link rel="canonical" href="https://hernavia.github.io/Hernavia/documentos.html">
