--- a/carta.html
+++ b/carta.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carta Fundacional - Hernavia</title>
     <meta name="description" content="Esta carta nos muestra la columna de Hernavia con los principios básicos e información imprescindible para conocer Hernavia de forma seria.">
-    <link rel="icon" type="image/png" href="favicono.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
     <link rel="preload" href="estilo.css" as="style">
     <link rel="stylesheet" href="estilo.css">
 <link rel="canonical" href="https://hernavia.github.io/Hernavia/carta.html">
