--- a/comounirse.html
+++ b/comounirse.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¿Cómo unirse? - Hernavia</title>
     <meta name="description" content="Formulario e información sobre cómo unirse a Hernavia, quieres saber más? Un poco más abajo encuentra una página que te lo explicará.">
-    <link rel="icon" type="image/png" href="favicono.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
     <link rel="preload" href="estilo.css" as="style">
     <link rel="stylesheet" href="estilo.css">
     <link rel="canonical" href="https://hernavia.github.io/Hernavia/comounirse.html">
