--- a/noticias-random.html
+++ b/noticias-random.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noticias Random - Hernavia</title>
     <meta name="description" content="Noticias aleatorias y curiosas de Hernavia y del mundo. Aquí encontrarás novedades y datos curiosos que no entran en otras categorías.">
-    <link rel="icon" type="image/png" href="favicono.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
     <link rel="stylesheet" href="estilo.css">
      <link rel="canonical" href="https://hernavia.github.io/Hernavia/noticias-random.html">
     <meta name="robots" content="index, follow">
