--- a/index.html
+++ b/index.html
@@ -1,48 +1,69 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
+!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hernavia</title>
+    <meta name="description" content="Descubre Hernavia, una identidad colombiana donde creatividad, comunidad y cultura se unen por un futuro sostenible.">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
+    <link rel="preload" href="estilo.css" as="style">
+    <link rel="stylesheet" href="estilo.css">
+    <link rel="canonical" href="https://hernavia.github.io/Hernavia/">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Proyecto Hernavia">
+</head>
 
-  <url>
-    <loc>https://hernavia.github.io/Hernavia/</loc>
-  </url>
+<body>
 
-  <url>
-    <loc>https://hernavia.github.io/Hernavia/documentos.html</loc>
-  </url>
+    <header>
+        <h1>Hernavia</h1>
+    </header>
 
-  <url>
-    <loc>https://hernavia.github.io/Hernavia/noticias.html</loc>
-  </url>
+    <nav class="nav-comun">
+        <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
+        <a href="documentos.html">Documentos</a>
+        <a href="noticias.html">Noticias</a>
+        <a href="consultass.html">Consultas</a>
+        <a href="simbolos.html">Símbolos</a>
+        <a href="comounirse.html">¿Cómo unirse?</a>
+        <a href="sugerencias.html">Sugerencias</a>
+        <a href="noticias-random.html">Noticias Random</a>
+    </nav>
 
-  <url>
-    <loc>https://hernavia.github.io/Hernavia/consultas.html</loc>
-  </url>
+    <main>
+        <section id="que-es" class="texto-largo">
+            <h2>¿Qué es Hernavia?</h2>
+            <p>Más que un proyecto, Hernavia es un espacio donde la creatividad y la unión se convierten en identidad y tú puedes ayudar a cambiar la historia.</p>
+            <p>Se fundamenta en los principios del respeto y cuidado por la naturaleza, la protección de los animales, el reciclaje, la recolección de basura, el cuidado del agua y la promoción de fines ambientales. Además, Hernavia impulsa la innovación, apoyando nuevos proyectos y fomentando un espíritu creativo en la sociedad para encontrar soluciones reales a los retos actuales.</p>
+            <p>Al mismo tiempo, promueve la unión y el bienestar de la comunidad, buscando que cada persona se sienta segura y parte de un entorno que la valora.</p>
+            <p>En resumen, la identidad hernaviana se sostiene sobre la naturaleza, la paz y la innovación.</p>
+        </section>
 
+        <section id="donde">
+            <h2>¿Dónde se encuentra?</h2>
+            <p>Hernavia nace en Colombia, específicamente en el municipio de Gachancipá, donde puedes encontrar sus proyectos y toda su administración, aún en etapa inicial, por lo cual aun no esperes ver actos tangibles estructura fuerte y todo cubierto pues aun es una etapa teorica y no practica asi que tus sugerencias no ayudan mucho.</p>
+        </section>
   <url>
     <loc>https://hernavia.github.io/Hernavia/simbolos.html</loc>
   </url>
 
-  <url>
-    <loc>https://hernavia.github.io/Hernavia/comounirse.html</loc>
-  </url>
+        <section id="bandera">
+            <h2>Bandera</h2>
+            <img src="img/bandera.png" alt="Bandera de Hernavia" class="bandera" width="300" height="200">
+        </section>
 
-  <url>
-    <loc>https://hernavia.github.io/Hernavia/sugerencias.html</loc>
-  </url>
+        <section id="significado">
+            <h2>Significado de los colores</h2>
+            <ul>
+                <li><strong>Verde:</strong> Representa la naturaleza y su tono particular simboliza también la innovación.</li>
+                <li><strong>Blanco:</strong> Simboliza la paz, cohesión, unión y fraternidad.</li>
+                <li><strong>Amarillo:</strong> Representa las raíces con Colombia.</li>
+            </ul>
+        </section>
+    </main>
 
-  <url>
-    <loc>https://hernavia.github.io/Hernavia/carta.html</loc>
-  </url>
-
-  <url>
-    <loc>https://hernavia.github.io/Hernavia/leyes.html</loc>
-  </url>
-
-  <url>
-    <loc>https://hernavia.github.io/Hernavia/noticias-random.html</loc>
-  </url>
-
-  <url>
-    <loc>https://hernavia.github.io/Hernavia/identidad.html</loc>
-  </url>
-
-</urlset>
+    <footer>
+        &copy; 2025 Hernavia - Proyecto Cultural
+    </footer>
+</body>
+</html>
