--- a/index.html
+++ b/index.html
@@ -1,69 +1,67 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hernavia</title>
-    <meta name="description" content="Descubre Hernavia, una identidad colombiana donde creatividad, comunidad y cultura se unen por un futuro sostenible.">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
-    <link rel="preload" href="estilo.css" as="style">
-    <link rel="stylesheet" href="estilo.css">
-    <link rel="canonical" href="https://hernavia.github.io/Hernavia/">
-    <meta name="robots" content="index, follow">
-    <meta name="author" content="Proyecto Hernavia">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hernavia</title>
+  <meta name="description" content="Descubre Hernavia, una identidad colombiana donde creatividad, comunidad y cultura se unen por un futuro sostenible.">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
+  <link rel="preload" href="estilo.css" as="style">
+  <link rel="stylesheet" href="estilo.css">
+  <link rel="canonical" href="https://hernavia.github.io/Hernavia/">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Proyecto Hernavia">
 </head>
 
 <body>
 
-    <header>
-        <h1>Hernavia</h1>
-    </header>
+  <header>
+    <h1>Hernavia</h1>
+  </header>
 
-    <nav class="nav-comun">
-        <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
-        <a href="documentos.html">Documentos</a>
-        <a href="noticias.html">Noticias</a>
-        <a href="consultass.html">Consultas</a>
-        <a href="simbolos.html">Símbolos</a>
-        <a href="comounirse.html">¿Cómo unirse?</a>
-        <a href="sugerencias.html">Sugerencias</a>
-        <a href="noticias-random.html">Noticias Random</a>
-    </nav>
+  <nav class="nav-comun">
+    <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
+    <a href="documentos.html">Documentos</a>
+    <a href="noticias.html">Noticias</a>
+    <a href="consultas.html">Consultas</a>
+    <a href="simbolos.html">Símbolos</a>
+    <a href="comounirse.html">¿Cómo unirse?</a>
+    <a href="sugerencias.html">Sugerencias</a>
+    <a href="noticias-random.html">Noticias Random</a>
+  </nav>
 
-    <main>
-        <section id="que-es" class="texto-largo">
-            <h2>¿Qué es Hernavia?</h2>
-            <p>Más que un proyecto, Hernavia es un espacio donde la creatividad y la unión se convierten en identidad y tú puedes ayudar a cambiar la historia.</p>
-            <p>Se fundamenta en los principios del respeto y cuidado por la naturaleza, la protección de los animales, el reciclaje, la recolección de basura, el cuidado del agua y la promoción de fines ambientales. Además, Hernavia impulsa la innovación, apoyando nuevos proyectos y fomentando un espíritu creativo en la sociedad para encontrar soluciones reales a los retos actuales.</p>
-            <p>Al mismo tiempo, promueve la unión y el bienestar de la comunidad, buscando que cada persona se sienta segura y parte de un entorno que la valora.</p>
-            <p>En resumen, la identidad hernaviana se sostiene sobre la naturaleza, la paz y la innovación.</p>
-        </section>
+  <main>
+    <section id="que-es" class="texto-largo">
+      <h2>¿Qué es Hernavia?</h2>
+      <p>Más que un proyecto, Hernavia es un espacio donde la creatividad y la unión se convierten en identidad. Aquí, cada persona puede aportar ideas y ayudar a cambiar la historia.</p>
+      <p>Se fundamenta en los principios del respeto y cuidado por la naturaleza, la protección de los animales, el reciclaje, la recolección de basura, el cuidado del agua y la promoción de fines ambientales.</p>
+      <p>Además, Hernavia impulsa la innovación, apoyando nuevos proyectos y fomentando un espíritu creativo en la sociedad para encontrar soluciones reales a los retos actuales.</p>
+      <p>En resumen, la identidad hernaviana se sostiene sobre la naturaleza, la paz y la innovación.</p>
+    </section>
 
-        <section id="donde">
-            <h2>¿Dónde se encuentra?</h2>
-            <p>Hernavia nace en Colombia, específicamente en el municipio de Gachancipá, donde puedes encontrar sus proyectos y toda su administración, aún en etapa inicial, por lo cual aun no esperes ver actos tangibles estructura fuerte y todo cubierto pues aun es una etapa teorica y no practica asi que tus sugerencias no ayudan mucho.</p>
-        </section>
-  <url>
-    <loc>https://hernavia.github.io/Hernavia/simbolos.html</loc>
-  </url>
+    <section id="donde">
+      <h2>¿Dónde se encuentra?</h2>
+      <p>Hernavia nace en Colombia, específicamente en el municipio de Gachancipá, donde puedes encontrar sus proyectos y su administración. Actualmente se encuentra en una etapa inicial y teórica, por lo cual aún no existen estructuras o acciones tangibles. Tus sugerencias y apoyo son esenciales para fortalecerla.</p>
+    </section>
 
-        <section id="bandera">
-            <h2>Bandera</h2>
-            <img src="img/bandera.png" alt="Bandera de Hernavia" class="bandera" width="300" height="200">
-        </section>
+    <section id="bandera">
+      <h2>Bandera</h2>
+      <img src="img/bandera.png" alt="Bandera de Hernavia" class="bandera" width="300" height="200">
+    </section>
 
-        <section id="significado">
-            <h2>Significado de los colores</h2>
-            <ul>
-                <li><strong>Verde:</strong> Representa la naturaleza y su tono particular simboliza también la innovación.</li>
-                <li><strong>Blanco:</strong> Simboliza la paz, cohesión, unión y fraternidad.</li>
-                <li><strong>Amarillo:</strong> Representa las raíces con Colombia.</li>
-            </ul>
-        </section>
-    </main>
+    <section id="significado">
+      <h2>Significado de los colores</h2>
+      <ul>
+        <li><strong>Verde:</strong> Representa la naturaleza y su tono particular simboliza también la innovación.</li>
+        <li><strong>Blanco:</strong> Simboliza la paz, cohesión, unión y fraternidad.</li>
+        <li><strong>Amarillo:</strong> Representa las raíces con Colombia.</li>
+      </ul>
+    </section>
+  </main>
 
-    <footer>
-        &copy; 2025 Hernavia - Proyecto Cultural
-    </footer>
+  <footer>
+    &copy; 2025 Hernavia — Proyecto Cultural
+  </footer>
+
 </body>
 </html>
