--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hernavia</title>
   <meta name="description" content="Descubre Hernavia, una identidad colombiana donde creatividad, comunidad y cultura se unen por un futuro sostenible.">
+  <meta name="theme-color" content="#ffffff">
   <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
   <link rel="preload" href="estilo.css" as="style">
   <link rel="stylesheet" href="estilo.css">
   <link rel="canonical" href="https://hernavia.github.io/Hernavia/">
   <meta name="robots" content="index, follow">
   <meta name="author" content="Proyecto Hernavia">
+  <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
@@ -46,7 +48,7 @@
 
     <section id="bandera">
       <h2>Bandera</h2>
-      <img src="img/bandera.png" alt="Bandera de Hernavia" class="bandera" width="300" height="200">
+      <img src="img/bandera.png" alt="Bandera de Hernavia" class="bandera" width="300" height="200" loading="lazy">
     </section>
 
     <section id="significado">
