--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 
     <section id="donde">
       <h2>¿Dónde se encuentra?</h2>
-      <p>Hernavia nace en Colombia, específicamente en el municipio de Gachancipá, donde puedes encontrar sus proyectos y su administración. Actualmente se encuentra en una etapa inicial y teórica, por lo cual aún no existen estructuras o acciones tangibles. Tus sugerencias y apoyo son esenciales para fortalecerla.</p>
+      <p>Hernavia nace en Colombia, específicamente en el municipio de Gachancipá, donde puedes encontrar sus proyectos y su administración.</p>
+      <p>Actualmente se encuentra en una etapa inicial y teórica, por lo cual aún no existen estructuras o acciones tangibles. Tus sugerencias y apoyo son esenciales para fortalecerla.</p>
     </section>
 
     <section id="bandera">
@@ -67,3 +68,4 @@
 
 </body>
 </html>
+
