--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
       <p>En resumen, la identidad hernaviana se sostiene sobre la naturaleza, la paz y la innovación.</p>
     </section>
 
-    <section id="donde">
+    <section id="texto-largo">
       <h2>¿Dónde se encuentra?</h2>
-      <p>Hernavia nace en Colombia, específicamente en el municipio de Gachancipá, donde puedes encontrar sus proyectos y su administración.</p>
-      <p>Actualmente se encuentra en una etapa inicial y teórica, por lo cual aún no existen estructuras o acciones tangibles. Tus sugerencias y apoyo son esenciales para fortalecerla.</p>
+      <p>Hernavia nace en Colombia, específicamente en el municipio de Gachancipá, donde puedes encontrar sus proyectos y su administración.
+      actualmente se encuentra en una etapa inicial y teórica, por lo cual aún no existen estructuras o acciones tangibles. Tus sugerencias y apoyo son esenciales para fortalecerla.</p>
     </section>
 
     <section id="bandera">
@@ -68,4 +68,5 @@
 
 </body>
 </html>
+
 
