--- a/leyes.html
+++ b/leyes.html
@@ -80,7 +80,14 @@
         </ul>
 
         <h2>Ley 6 – Inactividad de Ciudadanos Hernavianos</h2>
-        <p>Todo ciudadano que permanezca inactivo durante dos meses sin participar en actividades, votaciones o aportar a Hernavia recibirá un aviso de su estatus. Si la inactividad continúa al tercer mes, su ciudadanía será suspendida temporalmente, pudiendo recuperarla al participar en cualquier actividad oficial durante el mes siguiente. La reincidencia será vigilada, y a la tercera suspensión injustificada, el ciudadano perderá su ciudadanía por un periodo de 6 meses. Se podrá justificar la inactividad con motivo válido.</p>
+        <p>Todo ciudadano que permanezca inactivo durante dos meses —sin participar en actividades, votaciones o aportar a Hernavia— recibirá un aviso sobre su estatus.</p>
+
+<p>Si la inactividad continúa durante un tercer mes, su ciudadanía será suspendida temporalmente. Podrá recuperarla al participar en cualquier actividad oficial dentro del mes siguiente.</p>
+
+<p>La reincidencia será observada: tras una tercera suspensión injustificada, el ciudadano perderá su ciudadanía por un periodo de seis meses.</p>
+
+<p>La inactividad podrá justificarse si existe un motivo válido.</p>
+
 
         <h2>Ley 7 – Eliminación de Datos</h2>
         <p>Tras la revocación o renuncia de la ciudadanía, los datos personales del ciudadano deberán ser eliminados y su número de identificación expropiado en un plazo máximo de 30 días.</p>
