--- a/leyes.html
+++ b/leyes.html
@@ -80,7 +80,7 @@
         </ul>
 
         <h2>Ley 6 – Inactividad de Ciudadanos Hernavianos</h2>
-<p>Todo ciudadano que permanezca inactivo durante dos meses —sin participar en actividades, votaciones o aportar a Hernavia— recibirá un aviso sobre su estatus. Si la inactividad continúa durante un tercer mes, su ciudadanía será suspendida temporalmente, pudiendo recuperarla al participar en cualquier actividad oficial dentro del mes siguiente.</p>
+<p>Todo ciudadano que permanezca inactivo durante dos meses sin participar en actividades, votaciones o aportar a Hernavia— recibirá un aviso sobre su estatus. Si la inactividad continúa durante un tercer mes, su ciudadanía será suspendida temporalmente, pudiendo recuperarla al participar en cualquier actividad oficial dentro del mes siguiente.</p>
 
 <p>La reincidencia será observada: tras una tercera suspensión injustificada, el ciudadano perderá su ciudadanía por un periodo de seis meses. La inactividad podrá justificarse si existe un motivo válido.</p>
 
