--- a/documentos.html
+++ b/documentos.html
@@ -34,8 +34,8 @@
   <main>
     <section class="texto-largo">
       <h2>Carta Fundacional</h2>
-      <p>La <strong>Carta Fundacional</strong> de Hernavia es un documento breve, pensado como la base de nuestra identidad y organización. Funciona como una constitución inicial que guía los pasos del proyecto mientras crece y se consolida.</p>
-      <p>En ella se establece al <strong>Arconte</strong> como máxima autoridad, encargado de proteger la unión de la comunidad y tomar decisiones mientras se desarrollan instituciones más amplias. También define los principios fundamentales: respeto entre ciudadanos, cuidado de la naturaleza, participación activa, innovación y fraternidad con otras culturas.</p>
+      <p>La carta fundacional de Hernavia es un documento breve, pensado como la base de nuestra identidad y organización. Funciona como una constitución inicial que guía los pasos del proyecto mientras crece y se consolida.</p>
+      <p>En ella se establece al Arconte como máxima autoridad, encargado de proteger la unión de la comunidad y tomar decisiones mientras se desarrollan instituciones más amplias. También define los principios fundamentales: respeto entre ciudadanos, cuidado de la naturaleza, participación activa, innovación y fraternidad con otras culturas.</p>
       <p>Además, describe las obligaciones de los ciudadanos, que incluyen aportar al desarrollo de la comunidad, respetar las decisiones colectivas, defender la paz y contribuir al progreso común. Señala también objetivos iniciales como impulsar la innovación, proteger el medio ambiente, fomentar la educación cívica y promover un desarrollo económico propio.</p>
       <p>La Carta dedica un espacio a los símbolos de Hernavia, especialmente la bandera, que representa la naturaleza, la paz, la innovación y las raíces con Colombia. Finalmente, aclara que se trata de un documento transitorio que podrá transformarse en una versión más completa a futuro.</p>
       <a href="carta.html" class="boton-hernavia">Leer carta completa</a>
@@ -43,7 +43,7 @@
 
     <section class="texto-largo">
       <h2>Leyes Transitorias</h2>
-      <p>Las <strong>Leyes Transitorias</strong> de Hernavia son un conjunto de normas provisionales que guían el funcionamiento de la comunidad mientras se consolida la organización. Establecen los mecanismos de ciudadanía, aportes, votaciones, administración y renuncia de miembros.</p>
+      <p>Las leyes transitorias de Hernavia son un conjunto de normas provisionales que guían el funcionamiento de la comunidad mientras se consolida la organización. Establecen los mecanismos de ciudadanía, aportes, votaciones, administración y renuncia de miembros.</p>
       <p>Estas leyes buscan mantener la unidad, proteger la naturaleza, fomentar la innovación y asegurar la cohesión de Hernavia. Son flexibles y sujetas a interpretación por el Arconte, siempre dentro del marco de los valores de respeto, paz, innovación y unión.</p>
       <a href="leyes.html" class="boton-hernavia">Leer leyes completas</a>
     </section>
