--- a/documentos.html
+++ b/documentos.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Explora los documentos fundacionales de Hernavia, incluyendo su Carta y Leyes Transitorias, base de esta identidad cultural y ambiental.">
   <meta name="theme-color" content="#f0f4f7">
   <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
+  <link rel="preload" href="estilo.css" as="style">
   <link rel="stylesheet" href="estilo.css">
   <link rel="canonical" href="https://hernavia.github.io/Hernavia/documentos.html">
   <meta name="robots" content="index, follow">
