--- a/carta.html
+++ b/carta.html
@@ -6,15 +6,15 @@
     <title>Carta Fundacional - Hernavia</title>
     <meta name="description" content="Esta carta nos muestra la columna de Hernavia con los principios básicos e información imprescindible para conocer Hernavia de forma seria.">
     <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
-    <link rel="preload" href="estilo.css" as="style">
     <link rel="stylesheet" href="estilo.css">
-<link rel="canonical" href="https://hernavia.github.io/Hernavia/carta.html">
+    <link rel="canonical" href="https://hernavia.github.io/Hernavia/carta.html">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Proyecto Hernavia">
+    <link rel="manifest" href="manifest.json">
     <style>
         section.carta {
-            min-height: 600px; /* evita CLS por contenido largo */
-            line-height: 1.6;
+            min-height: 600px;
+            line-height: 1.7;
             text-align: justify;
             padding: 20px;
             max-width: 900px;
@@ -24,9 +24,21 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
+
         section.carta h2, section.carta h3, section.carta h4 {
             color: #006A44;
         }
+
+        section.carta h3, section.carta h4 {
+            margin-top: 20px;
+        }
+
+        section.carta p,
+        section.carta ol,
+        section.carta ul {
+            margin-bottom: 15px;
+        }
+
         .bandera {
             display: block;
             width: 300px;
@@ -36,6 +48,31 @@
             border: 4px solid #006A44;
             border-radius: 8px;
         }
+
+        @media (max-width: 600px) {
+            .bandera {
+                width: 90%;
+                max-width: 250px;
+            }
+        }
+
+        .boton-volver {
+            display: inline-block;
+            text-align: center;
+            background-color: #006A44;
+            color: #fff;
+            padding: 12px 20px;
+            border-radius: 5px;
+            font-weight: 700;
+            font-family: Montserrat, sans-serif;
+            text-decoration: none;
+            transition: background-color .3s;
+            margin-top: 20px;
+        }
+
+        .boton-volver:hover {
+            background-color: #004a2d;
+        }
     </style>
 </head>
 
@@ -44,7 +81,6 @@
         <h1>Carta Fundacional de Hernavia</h1>
     </header>
 
-    <!-- Nav incrustado -->
     <nav class="nav-comun">
         <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
         <a href="documentos.html">Documentos</a>
@@ -56,7 +92,7 @@
         <a href="noticias-random.html">Noticias Random</a>
     </nav>
 
-    <main>
+    <main role="main">
         <section class="carta">
             <h2>Preámbulo</h2>
             <p>
@@ -121,6 +157,8 @@
             <p>La bandera de Hernavia simboliza la naturaleza, la innovación, la paz y la fraternidad con Colombia.</p>
 
             <p><strong>Arconte fundador:</strong> Hernán Coronado.</p>
+
+            <a href="documentos.html" class="boton-volver">Volver a Documentos</a>
         </section>
     </main>
 
@@ -129,4 +167,3 @@
     </footer>
 </body>
 </html>
-
