--- a/documentos.html
+++ b/documentos.html
@@ -3,45 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Carta Fundacional - Hernavia</title>
-  <meta name="description" content="Esta carta nos muestra la columna de Hernavia con los principios básicos e información imprescindible para conocer Hernavia de forma seria.">
+  <title>Documentos de Hernavia</title>
+  <meta name="description" content="Explora los documentos fundacionales de Hernavia, incluyendo su Carta y Leyes Transitorias, base de esta identidad cultural y ambiental.">
+  <meta name="theme-color" content="#f0f4f7">
   <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
   <link rel="stylesheet" href="estilo.css">
-  <link rel="canonical" href="https://hernavia.github.io/Hernavia/carta.html">
+  <link rel="canonical" href="https://hernavia.github.io/Hernavia/documentos.html">
   <meta name="robots" content="index, follow">
   <meta name="author" content="Proyecto Hernavia">
   <link rel="manifest" href="manifest.json">
-  <style>
-    section.carta {
-      line-height: 1.6;
-      text-align: justify;
-      padding: 20px;
-      max-width: 900px;
-      margin: 20px auto;
-      background-color: white;
-      border-left: 8px solid #006A44;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
-    section.carta h2, section.carta h3, section.carta h4 {
-      color: #006A44;
-      margin-top: 1.5em;
-    }
-    .bandera {
-      display: block;
-      width: 300px;
-      height: auto;
-      aspect-ratio: 3/2;
-      margin: 15px auto;
-      border: 4px solid #006A44;
-      border-radius: 8px;
-    }
-  </style>
 </head>
 
 <body>
   <header>
-    <h1>Carta Fundacional de Hernavia</h1>
+    <h1>Documentos de Hernavia</h1>
   </header>
 
   <nav class="nav-comun">
@@ -56,52 +31,20 @@
   </nav>
 
   <main>
-    <section class="carta">
-      <h2>Preámbulo</h2>
-      <p>Nosotros, el pueblo hernaviano, declaramos nuestra unión en una sola comunidad, guiados por los principios de respeto, justicia, innovación, progreso y fraternidad.</p>
+    <section class="texto-largo">
+      <h2>Carta Fundacional</h2>
+      <p>La carta fundacional de Hernavia es un documento breve, pensado como la base de nuestra identidad y organización. Funciona como una constitución inicial que guía los pasos del proyecto mientras crece y se consolida.</p>
+      <p>En ella se establece al Arconte como máxima autoridad, encargado de proteger la unión de la comunidad y tomar decisiones mientras se desarrollan instituciones más amplias. También define los principios fundamentales: respeto entre ciudadanos, cuidado de la naturaleza, participación activa, innovación y fraternidad con otras culturas.</p>
+      <p>Además, describe las obligaciones de los ciudadanos, que incluyen aportar al desarrollo de la comunidad, respetar las decisiones colectivas, defender la paz y contribuir al progreso común. Señala también objetivos iniciales como impulsar la innovación, proteger el medio ambiente, fomentar la educación cívica y promover un desarrollo económico propio.</p>
+      <p>La Carta dedica un espacio a los símbolos de Hernavia, especialmente la bandera, que representa la naturaleza, la paz, la innovación y las raíces con Colombia. Finalmente, aclara que se trata de un documento transitorio que podrá transformarse en una versión más completa a futuro.</p>
+      <a href="carta.html" class="boton-hernavia">Leer carta completa</a>
+    </section>
 
-      <h3>Artículo 1 – Liderazgo</h3>
-      <p>El Arconte, cargo ejercido inicialmente por el fundador, será la máxima autoridad de Hernavia. Tendrá poder total para tomar decisiones administrativas, políticas y sociales mientras Hernavia consolida sus instituciones. El Arconte estará sujeto a esta Carta y deberá velar por la unión y el bienestar del pueblo hernaviano.</p>
-
-      <h3>Artículo 2 – Principios Fundamentales</h3>
-      <ol>
-        <li>Respeto y dignidad hacia los demás ciudadanos.</li>
-        <li>Respeto y cuidado de la naturaleza y los recursos comunes.</li>
-        <li>Participación activa en votaciones, asambleas o eventos convocados por Hernavia.</li>
-        <li>Solidaridad con los demás hernavianos en momentos de necesidad.</li>
-        <li>Búsqueda constante del conocimiento, la innovación y el progreso comunitario.</li>
-        <li>Fraternidad con otras naciones y culturas, manteniendo la identidad hernaviana.</li>
-      </ol>
-
-      <h3>Artículo 3 – Obligaciones de los Ciudadanos</h3>
-      <ol>
-        <li>Aportar a la comunidad mediante trabajo, servicio, recursos o conocimiento útil.</li>
-        <li>Cumplir y respetar las decisiones del Arconte, como máxima autoridad provisional.</li>
-        <li>Defender la paz y rechazar la violencia injustificada.</li>
-        <li>Contribuir al desarrollo económico y social de Hernavia mediante la productividad y el esfuerzo propio.</li>
-        <li>Respetar los símbolos de Hernavia como expresión de identidad común.</li>
-        <li>Proteger y apoyar a su comunidad en situaciones de crisis o emergencia.</li>
-      </ol>
-
-      <h3>Artículo 4 – Identidad y Objetivos Iniciales</h3>
-      <p>La bandera y demás símbolos serán definidos por el Arconte y reconocidos provisionalmente como representación de la identidad hernaviana, con su lema “Paz, naturaleza, innovación” y la frase “Nacidos de un sueño, luchando por cumplirlo”.</p>
-      <p>Los objetivos iniciales de Hernavia serán:</p>
-      <ol>
-        <li>Fortalecer la unión y crecimiento de la comunidad hernaviana.</li>
-        <li>Desarrollar una base económica autosuficiente, iniciando con la producción de alimentos y recursos propios.</li>
-        <li>Establecer mecanismos de organización interna simples pero efectivos bajo la guía del Arconte.</li>
-        <li>Promover la educación cívica, la innovación y el respeto a la naturaleza.</li>
-      </ol>
-
-      <h3>Artículo 5 – Carácter Transitorio</h3>
-      <p>Esta Carta es un documento provisional. Podrá ser modificada en el futuro a medida que Hernavia crezca y se fortalezca, por decisión del Arconte o mediante una futura Constitución establecida con la participación del pueblo. Toda acción deberá respetar esta Carta, las leyes de Hernavia que se promulguen posteriormente, y las leyes del país donde se encuentre el ciudadano.</p>
-
-      <h3>Artículo 6 – Símbolos</h3>
-      <h4>Bandera</h4>
-      <img src="img/bandera.png" alt="Bandera Hernavia" class="bandera">
-      <p>La bandera de Hernavia simboliza la naturaleza, la innovación, la paz y la fraternidad con Colombia.</p>
-
-      <p><strong>Arconte fundador:</strong> Hernán Coronado.</p>
+    <section class="texto-largo">
+      <h2>Leyes Transitorias</h2>
+      <p>Las leyes transitorias de Hernavia son un conjunto de normas provisionales que guían el funcionamiento de la comunidad mientras se consolida la organización. Establecen los mecanismos de ciudadanía, aportes, votaciones, administración y renuncia de miembros.</p>
+      <p>Estas leyes buscan mantener la unidad, proteger la naturaleza, fomentar la innovación y asegurar la cohesión de Hernavia. Son flexibles y sujetas a interpretación por el Arconte, siempre dentro del marco de los valores de respeto, paz, innovación y unión.</p>
+      <a href="leyes.html" class="boton-hernavia">Leer leyes completas</a>
     </section>
   </main>
 
