--- a/carta.html
+++ b/carta.html
@@ -6,6 +6,7 @@
     <title>Carta Fundacional - Hernavia</title>
     <meta name="description" content="Esta carta nos muestra la columna de Hernavia con los principios básicos e información imprescindible para conocer Hernavia de forma seria.">
     <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
+    <link rel="preload" href="estilo.css" as="style">
     <link rel="stylesheet" href="estilo.css">
     <link rel="canonical" href="https://hernavia.github.io/Hernavia/carta.html">
     <meta name="robots" content="index, follow">
@@ -13,6 +14,7 @@
     <link rel="manifest" href="manifest.json">
     <style>
         section.carta {
+            min-height: 600px;
             line-height: 1.6;
             text-align: justify;
             padding: 20px;
@@ -25,7 +27,6 @@
         }
         section.carta h2, section.carta h3, section.carta h4 {
             color: #006A44;
-            margin-top: 1.5em;
         }
         .bandera {
             display: block;
@@ -58,10 +59,18 @@
     <main>
         <section class="carta">
             <h2>Preámbulo</h2>
-            <p>Nosotros, el pueblo hernaviano, declaramos nuestra unión en una sola comunidad, guiados por los principios de respeto, justicia, innovación, progreso y fraternidad.</p>
+            <p>
+                Nosotros, el pueblo hernaviano, declaramos nuestra unión en una sola comunidad, guiados por los principios
+                de respeto, justicia, innovación, progreso y fraternidad.
+            </p>
 
             <h3>Artículo 1 – Liderazgo</h3>
-            <p>El Arconte, cargo ejercido inicialmente por el fundador, será la máxima autoridad de Hernavia. Tendrá poder total para tomar decisiones administrativas, políticas y sociales mientras Hernavia consolida sus instituciones. El Arconte estará sujeto a esta Carta y deberá velar por la unión y el bienestar del pueblo hernaviano.</p>
+            <p>
+                El Arconte, cargo ejercido inicialmente por el fundador, será la máxima autoridad de Hernavia.
+                Tendrá poder total para tomar decisiones administrativas, políticas y sociales
+                mientras Hernavia consolida sus instituciones.
+                El Arconte estará sujeto a esta Carta y deberá velar por la unión y el bienestar del pueblo hernaviano.
+            </p>
 
             <h3>Artículo 2 – Principios Fundamentales</h3>
             <ol>
@@ -84,7 +93,11 @@
             </ol>
 
             <h3>Artículo 4 – Identidad y Objetivos Iniciales</h3>
-            <p>La bandera y demás símbolos serán definidos por el Arconte y reconocidos provisionalmente como representación de la identidad hernaviana, con su lema “Paz, naturaleza, innovación” y la frase “Nacidos de un sueño, luchando por cumplirlo”.</p>
+            <p>
+                La bandera y demás símbolos serán definidos por el Arconte y reconocidos provisionalmente
+                como representación de la identidad hernaviana, con su lema “Paz, naturaleza, innovación”
+                y la frase “Nacidos de un sueño, luchando por cumplirlo”.
+            </p>
             <p>Los objetivos iniciales de Hernavia serán:</p>
             <ol>
                 <li>Fortalecer la unión y crecimiento de la comunidad hernaviana.</li>
@@ -94,7 +107,13 @@
             </ol>
 
             <h3>Artículo 5 – Carácter Transitorio</h3>
-            <p>Esta Carta es un documento provisional. Podrá ser modificada en el futuro a medida que Hernavia crezca y se fortalezca, por decisión del Arconte o mediante una futura Constitución establecida con la participación del pueblo. Toda acción deberá respetar esta Carta, las leyes de Hernavia que se promulguen posteriormente, y las leyes del país donde se encuentre el ciudadano.</p>
+            <p>
+                Esta Carta es un documento provisional. Podrá ser modificada en el futuro a medida que Hernavia
+                crezca y se fortalezca, por decisión del Arconte o mediante una futura Constitución establecida
+                con la participación del pueblo.
+                Toda acción deberá respetar esta Carta, las leyes de Hernavia que se promulguen posteriormente,
+                y las leyes del país donde se encuentre el ciudadano.
+            </p>
 
             <h3>Artículo 6 – Símbolos</h3>
             <h4>Bandera</h4>
@@ -106,7 +125,8 @@
     </main>
 
     <footer>
-        &copy; 2025 Hernavia - Proyecto Cultural
+        &copy; 2025 Hernavia — Proyecto Cultural
     </footer>
+
 </body>
 </html>
